# rust-practice

./: .gitignore  chk_crate.sh  chk_crate2.sh
actix-practice/: Cargo.toml  Cargo.toml~
actix-practice/src/: main.rs  main.rs.bk~  main.rs.new  main.rs~
aide01/: Cargo.toml
aide01/src/: main.rs
api-server/: Cargo.toml  Readme.md
api-server-aide/: Cargo.toml  Readme.md
api-server-aide/db/migrations/: 20240701223015_customer.down.sql  20240701223015_customer.up.sql
api-server-aide/src/: main.rs
api-server-htmx/: Cargo.toml  Readme.md
api-server-htmx/src/: api.rs  api2.rs  htmx.rs  lib.rs  main.rs  models.rs  spa.rs
api-server-htmx/templates/: content.list.tbody.j2  head.j2  index.j2  spa.j2
api-server-htmx/tests/: api_tests.rs  htmx_tests.rs  spa_tests.rs
api-server-swagger/: .env  Cargo.toml  Cargo.toml.bk2  Readme.md
api-server-swagger/src/: main.rs.bk2
api-server-utoipa/: Cargo.toml
api-server-utoipa/db/migrations/: 20240525200001_customer.up.sql
api-server-utoipa/src/: .env  main.rs
api-server/db/: create_data.sh
api-server/src/: main.rs
async01/: Cargo.toml  async_approaches_assessment.md
async01/src/: main.rs
axum-google-oauth2/: Readme.md
axum-google-oauth2-new/: Cargo.toml  Readme.md  csrf-attack-example.md  detailed-oauth-improvements.md  oauth-security-improvements-summary.md  session-fixation-protection.md
axum-google-oauth2-new/self_signed_certs/: cert.pem  key.pem
axum-google-oauth2-new/src/: main.rs
axum-google-oauth2-new/templates/: index_anon.j2  index_user.j2
axum-google-oauth2/src/: main.rs
axum-practice/: Cargo.toml
axum-practice/src/: main.rs
calculator-grpc/: Cargo.toml  build.rs
demo-singleton-example/: Cargo.toml  README.md
demo-singleton-example/src/: main.rs
demo-singleton-example02/: Cargo.toml  README.md
demo-singleton-example02/src/: main.rs
error01/: Cargo.toml
error01/src/: main.rs
forecast/: .env  Cargo.toml  Readme.md
forecast/db/: Readme.md  docker-compose.yaml  init.sql  sqlite.db  sqlite.db-shm  sqlite.db-wal
forecast/db/migrations/: 20240524232423_create_users_table.up.sql
forecast/src/: .env  main.rs
forecast/templates/: cities.html  index.html  stats.html
grpc_calculator/: Readme.md
grpc_calculator/proto/: calculator.proto
grpc_calculator/src/: client.rs  main.rs
grpc_hello_world/: Cargo.toml  Readme.md
grpc_hello_world/src/: client.rs  server.rs
grpc_routeguide/: Cargo.toml  Readme.md  build.rs
grpc_routeguide/proto/: route_guide.proto
grpc_routeguide/src/: main.rs
guessing_game/src/: main.rs  main.rs~
hello/src/: lib.rs  main.rs
hello_cargo/src/: main.rs  main.rs~
hello_world/: main
leetcode/: Cargo.toml
leetcode/q645/: Cargo.toml
leetcode/q645/src/: main.rs
leetcode/q720/: Cargo.toml
leetcode/q720/src/: main.rs
rust_tutorial_full_course/: Cargo.toml  Readme.md
rust_tutorial_full_course/src/: ex.rs  lifetime.rs  main.rs  polymorph.rs
rust_tutorial_full_course/src/restaurant/: mod.rs
signal01/: Cargo.toml
signal01/src/: main.rs
tls_concept/: Cargo.toml
tls_concept/src/: tls12.rs  tls13.rs
wasm01/: Cargo.toml  Readme.md  index.html
