[package]
name = "api-server-aide"
version = "0.1.0"
edition = "2021"

[dependencies]
aide = { version = "0.13.4", features = ["axum", "scalar", "axum-extra", "http", "bytes", "axum-headers", "axum-extra-query", "axum-extra-form"] }
axum = "0.7.5"
dotenv = "0.15.0"
schemars = "0.8.21"
serde = "1.0.203"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
