[package]
name = "api-server-swagger"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
serde = "1.0.203"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utoipa = "4.2.3"
utoipa-rapidoc = { version = "4.0.0", features = ["axum"] }
utoipa-redoc = { version = "4.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.1.0", features = ["axum"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
