[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
serde = "1.0.203"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
