[package]
name = "axum-google-oauth2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
async-session = "3.0.0"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
http = "1.1.0"
oauth2 = "4.4.2"
reqwest = { version = "0.12.7", features = ["rustls-tls", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
urlencoding = "2.1.3"
