[package]
name = "axum-google-oauth2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
askama = { version = "0.12.1", features = ["serde-json", "with-axum"] }
askama_axum = { version = "0.4.0", features = ["serde-json"] }
async-session = "3.0.0"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
chrono = "0.4.38"
http = "1.1.0"
rand = "0.8.5"
reqwest = "0.12.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
urlencoding = "2.1.3"
