[package]
name = "forecast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.5"
base64 = "0.22.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = "1.0.198"
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["any", "macros", "runtime-tokio-rustls", "postgres"] }
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
