[package]
name = "grpc_hello_world"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
tonic = "0.12.3"
prost = "0.13.4"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.12.3"
