[package]
name = "grpc_routeguide"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
prost = "0.13.4"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1.17"
tonic = "0.12.3"

[build-dependencies]
tonic-build = { version = "0.12.3", features = ["cleanup-markdown"] }

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"
