# TLS 1.3 / 1.2 コンセプトコード
#
# 実行方法:
#   cargo new tls_concept
#   cd tls_concept
#   # Cargo.toml の [dependencies] を以下で置き換える
#   # src/main.rs をこのファイルの内容で置き換える
#   cargo run --bin tls13
#   cargo run --bin tls12

[package]
name = "tls_concept"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tls13"
path = "src/tls13.rs"

[[bin]]
name = "tls12"
path = "src/tls12.rs"

[dependencies]
# ECDSA署名・ECDH鍵交換
p256        = { version = "0.13", features = ["ecdh", "ecdsa"] }
# AES-GCM暗号化
aes-gcm     = "0.10"
# HKDF鍵導出
hkdf        = "0.12"
sha2        = "0.10"
# 乱数生成
rand        = "0.8"
# Base64表示用
base64      = "0.22"
hex = "0.4.3"
